--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!--
 Author: smohamedjohn
-Author URL: http://goodwellfoundation.in
+Author URL: http://letslearnever.com
 
 
 -->
@@ -79,8 +79,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<span class="icon-bar"></span>
 						</button>
 						<a class="navbar-brand" href="index.html">
-							<span><font color="ORANGE"><img src="images/logos.jpg" width="75" height="31" alt="Tutorials " border="0"><B>GOOD WELL FOUNDATION</B></font >
-								<label><B>Learn It Share it...</B></label></span>	
+							<span><font color="ORANGE"><img src="images/logos.jpg" width="75" height="31" alt="Tutorials " border="0"><B>LET'S LEARN EVER</B></font >
+								</span>	
 						</a>
 					</div>
 					<!--/.navbar-header-->
@@ -160,9 +160,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="about-sub">
 				<div class="col-md-6 about_bottom_left">
 					<h4>Welcome to
-						<span>GWF</span>
+						<span>Let's Learn Ever</span>
 					</h4>
-					<p>Good well Foundation is committed to providing the quality skill development education and this company which was set up in 2013 to help the rural children.</p>
+					<p>Let's Learn Ever is committed to providing the quality skill development education and this company which was set up in 2013 to help the rural children.</p>
 					<p>"Our program is perfect solution to sharpen the observation skills,of tender-aged children of 4 to 14 years.Our programs internally help to develop the soft skill of the children which may lead to increased brain activity".</p>
 					<p>"Our Mission is to become the first choice children development organization in India as well as around the world. Our Vision is to set benchmarks in developing program for children development, unleash their hidden potential thereby helping to build a promising future generation for the nation".
 					</p>
@@ -337,7 +337,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="middle-sec-agile">
 		<div class="container">
 			<h4>Our
-				<span>GOOD WELL</span> FOUNDATION</h4>
+				<span>LET'S LEARN</span> EVER</h4>
 			<ul>
 				<li>
 					<div class="midle-left-w3l">
@@ -408,7 +408,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 								<div class="time">
 									<p>
-										<span class="fa fa-map-marker" aria-hidden="true"></span> Harur,636903</p>
+										<span class="fa fa-map-marker" aria-hidden="true"></span> Krishnagiri</p>
 								</div>
 								<div class="clearfix"> </div>
 							</div>
@@ -435,7 +435,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 								<div class="time">
 									<p>
-										<span class="fa fa-map-marker" aria-hidden="true"></span> Indian Public School Harur City, 636903</p>
+										<span class="fa fa-map-marker" aria-hidden="true"></span> Barath Public School,Krishnagiri</p>
 								</div>
 								<div class="clearfix"> </div>
 							</div>
@@ -465,7 +465,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 								<div class="time">
 									<p>
-										<span class="fa fa-map-marker" aria-hidden="true"></span> Dharmapuri City, 7458</p>
+										<span class="fa fa-map-marker" aria-hidden="true"></span> Krishnagiri City, 7458</p>
 								</div>
 								<div class="clearfix"> </div>
 							</div>
@@ -541,16 +541,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="mkls_footer_grid">
 					<div class="col-xs-4 mkls_footer_grid_left">
 						<h4>Location:</h4>
-						<p>TVK Nagar,Harur
-							<br> Dharmapuri</p>
+						<p>Kaveripattinam,
+							<br> Krishnagiri</p>
 					</div>
 					<div class="col-xs-4 mkls_footer_grid_left">
 						<h4>Mail Us:</h4>
 						<p>
-							<span>Phone : </span>999 444 4998</p>
+							<span>Phone : </span>638 219 9288</p>
 						<p>
 							<span>Email : </span>
-							<a href="mailto:info@example.com">goodwellfoundation@gmail.com</a>
+							<a href="mailto:info@example.com">letslearneveracademy@gmail.com</a>
 						</p>
 					</div>
 					<div class="col-xs-4 mkls_footer_grid_left">
@@ -591,8 +591,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="footer-copy-right">
 			<div class="container">
 				<div class="allah-copy">
-					<p>© 2018 GOOD WELL FOUNDATION. All rights reserved | Design by
-						<a href="http://goodwellfoundation.in/">GOOD WELL FOUNDATION</a>
+					<p>© 2018 LET'S LEARN EVER. All rights reserved | Design by
+						<a href="http://letslearnever.com/">LET'S LEARN EVER </a>
 					</p>
 				</div>
 				<div class="footercopy-social">
