--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ Author: SMohamedjohn
 <html lang="zxx">
 
 <head>
-	<title>GOOD WELL FOUNDATION</title>
+	<title>Let's Learn Ever</title>
 	<!-- meta-tags -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -37,7 +37,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 			<div class="bottom_header_left">
 			<p>
-				<span class="fa fa-map-marker" aria-hidden="true"></span> Harur , India
+				<span class="fa fa-map-marker" aria-hidden="true"></span> Krishnagiri , India
 			</p>
 			</div>
 			<div class="bottom_header_right">
@@ -76,10 +76,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<span class="icon-bar"></span>
 						</button>
 						<a class="navbar-brand" href="index.html">
-						<h2>
-							<span><font color="ORANGE"><img src="images/logos.jpg" width="75" height="31" alt="Tutorials " border="0"><B>GOOD WELL FOUNDATION</B></font >
-								<label><B>Learn It Share it...</B></label></span>	
-						</h2>
+						<h1>
+							<span><font color="Blue"><B>Let's Learn Ever</B></font >
+								</span>	
+						</h1>
 						</a>
 					</div>
 					<!--/.navbar-header-->
@@ -133,6 +133,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<li data-target="#myCarousel" data-slide-to="1" class=""></li>
 			<li data-target="#myCarousel" data-slide-to="2" class=""></li>
 			<li data-target="#myCarousel" data-slide-to="3" class=""></li>
+			<li data-target="#myCarousel" data-slide-to="4" class=""></li>
+			
 		</ol>
 		<div class="carousel-inner" role="listbox">
 			<div class="item active">
@@ -149,7 +151,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="item item2">
 				<div class="container">
 					<div class="carousel-caption">
-						<!--<h6>Welcome To GOOD WELL ACADAMY</h6>
+						<!--<h6>Welcome To Lets Learn ever ACADAMY</h6>
 						<h3>Most Popular
 							<span>Education</span>
 						</h3>
@@ -160,7 +162,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="item item3">
 				<div class="container">
 					<div class="carousel-caption">
-						<!--<h6>Welcome To Good Well Foundation</h6>
+						<!--<h6>Welcome To LETS LEARN EVER</h6>
 						<h3>We Can
 							<span>Teach</span> You</h3>
 						<p>Providing the Best Skill Development Courses.</p>-->
@@ -199,9 +201,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="welcome-sub-wthree">
 				<div class="col-md-6 banner_bottom_left">
 					<h4>About
-						<span>GOOD WELL</span>
+						<span>LET'S LEARN EVER</span>
 					</h4>
-					<p>Good well Foundation is committed to providing the quality skill development education and this company which was set up in 2013 to help the rural children.</p>
+					<p>Let's Learn Ever is committed to providing the quality skill development education and this company which was set up in 2013 to help the rural children.</p>
 					<p>"Our program is perfect solution to sharpen the observation skills,of tender-aged children of 4 to 14 years.Our programs internally help to develop the soft skill of the children which may lead to increased brain activity".</p>
 					<p>
 					"Our Mission is to become the first choice children development organization in India as well as around the world. Our Vision is to set benchmarks in developing program for children development, unleash their hidden potential thereby helping to build a promising future generation for the nation".
@@ -330,7 +332,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 								<div class="time">
 									<p>
-										<span class="fa fa-map-marker" aria-hidden="true"></span> Harur,636903</p>
+										<span class="fa fa-map-marker" aria-hidden="true"></span> Krishnagiri</p>
 								</div>
 								<div class="clearfix"> </div>
 							</div>
@@ -357,7 +359,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								</div>
 								<div class="time">
 									<p>
-										<span class="fa fa-map-marker" aria-hidden="true"></span> Indian Public School Harur City, 636903</p>
+										<span class="fa fa-map-marker" aria-hidden="true"></span> Barath Public School Krishnagri</p>
 								</div>
 								<div class="clearfix"> </div>
 							</div>
@@ -419,7 +421,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<div class="clearfix"> </div>
 							</div>
 							<div class="news-grid-info-bottom-w3ls-text">
-								<p>Be prepared for the 2019 state level compitation.</p>
+								<p>Be prepared for the 2021 state level compitation.</p>
 							</div>
 						</div>
 						<div class="clearfix"> </div>
@@ -456,7 +458,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="middle-sec-agile">
 		<div class="container">
 			<h4>Our
-				<span>Good WELL</span>FOUNDATION</h4>
+				<span>LET'S LEARN</span> EVER</h4>
 			<ul>
 				<li>
 					<div class="midle-left-w3l">
@@ -579,16 +581,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="mkls_footer_grid">
 					<div class="col-xs-4 mkls_footer_grid_left">
 						<h4>Location:</h4>
-						<p>TVK Nagar,Harur
-							<br> Dharmapuri</p>
+						<p>Housing Board,Kaveripattinam,
+							<br> Krishnagiri</p>
 					</div>
 					<div class="col-xs-4 mkls_footer_grid_left">
 						<h4>Mail Us:</h4>
 						<p>
-							<span>Phone : </span>999 444 4998</p>
+							<span>Phone : </span>6382199288</p>
 						<p>
 							<span>Email : </span>
-							<a href="mailto:info@example.com">goodwellfoundation@gmail.com</a>
+							<a href="mailto:info@example.com">letslearneveracademy@gmail.com</a>
 						</p>
 					</div>
 					<div class="col-xs-4 mkls_footer_grid_left">
@@ -629,8 +631,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="footer-copy-right">
 			<div class="container">
 				<div class="allah-copy">
-					<p>© 2018 GOOD WELL FOUNDATION. All rights reserved | Design by
-						<a href="http://goodwellfoundation.in/">Good Well Foundation</a>
+					<p>© 2018 LET'S LEARN EVER. All rights reserved | Design by
+						<a href="http://letslearnever.com/">Let's Learn Ever</a>
 					</p>
 				</div>
 				<div class="footercopy-social">
