--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="zxx">
 
 <head>
-<title>GOOD WELL FOUNDATION</title>
+<title>Let's Learn Ever</title>
 	<!-- meta-tags -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -40,7 +40,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 			<div class="bottom_header_left">
 				<p>
-					<span class="fa fa-map-marker" aria-hidden="true"></span> Harur , India
+					<span class="fa fa-map-marker" aria-hidden="true"></span>  Krishnagiri , India
 				</p>
 			</div>
 			<div class="bottom_header_right">
@@ -79,8 +79,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<span class="icon-bar"></span>
 						</button>
 						<a class="navbar-brand" href="index.html">
-							<span><font color="ORANGE"><img src="images/logos.jpg" width="75" height="31" alt="Tutorials " border="0"><B>GOOD WELL FOUNDATION</B></font >
-								<label><B>Learn It Share it...</B></label></span>	
+							<h1>
+							<span><font color="Blue"><B>Let's Learn Ever</B></font >
+								</span>	
+						</h1>
 						</a>
 					</div>
 					<!--/.navbar-header-->
@@ -160,7 +162,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="contact-row">
 				<div class="col-md-6 contact-text1">
 					<h4>Contact Our
-						<span>Good Well Academy</span>
+						<span>Let's Learn Ever Academy</span>
 					</h4>
 					<p>We are providing gloablized support for the student and abacus learners.
 					</p>
@@ -179,14 +181,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<h4>Contact Details</h4>
 				<ul class="w3_address">
 					<li>
-						<span class="fa fa-globe" aria-hidden="true"></span>TVK Nagar,Harur
+						<span class="fa fa-globe" aria-hidden="true"></span>Kaveripattinam,Krishnagiri
 					</li>
 					<li>
 						<span class="fa fa-envelope-o" aria-hidden="true"></span>
-						<a href="mailto:info@example.com">goodwellfoundation@gmail.com</a>
+						<a href="mailto:info@example.com">letslearneveracademy@gmail.com</a>
 					</li>
 					<li>
-						<span class="fa fa-phone" aria-hidden="true"></span>999 444 4998
+						<span class="fa fa-phone" aria-hidden="true"></span>638 219 9288
 					</li>
 				</ul>
 			</div>
@@ -213,22 +215,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!-- //contact -->
 
 
+		<!-- footer -->
 	<div class="mkl_footer">
 		<div class="sub-footer">
 			<div class="container">
 				<div class="mkls_footer_grid">
 					<div class="col-xs-4 mkls_footer_grid_left">
 						<h4>Location:</h4>
-						<p>TVK Nagar,Harur
-							<br> Dharmapuri</p>
+						<p>Housing Board,Kaveripattinam,
+							<br> Krishnagiri</p>
 					</div>
 					<div class="col-xs-4 mkls_footer_grid_left">
 						<h4>Mail Us:</h4>
 						<p>
-							<span>Phone : </span>999 444 4998</p>
+							<span>Phone : </span>6382199288</p>
 						<p>
 							<span>Email : </span>
-							<a href="mailto:info@example.com">goodwellfoundation@gmail.com</a>
+							<a href="mailto:info@example.com">letslearneveracademy@gmail.com</a>
 						</p>
 					</div>
 					<div class="col-xs-4 mkls_footer_grid_left">
@@ -269,8 +272,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="footer-copy-right">
 			<div class="container">
 				<div class="allah-copy">
-					<p>© 2018 GOOD WELL FOUNDATION. All rights reserved | Design by
-						<a href="http://goodwellfoundation.in/">Good Well Foundation</a>
+					<p>© 2018 LET'S LEARN EVER. All rights reserved | Design by
+						<a href="http://letslearnever.com/">Let's Learn Ever</a>
 					</p>
 				</div>
 				<div class="footercopy-social">
