--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 			<div class="bottom_header_left">
 				<p>
-					<span class="fa fa-map-marker" aria-hidden="true"></span> Harur , India
+					<span class="fa fa-map-marker" aria-hidden="true"></span>  Krishnagiri , India
 				</p>
 			</div>
 			<div class="bottom_header_right">
@@ -79,8 +79,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<span class="icon-bar"></span>
 						</button>
 						<a class="navbar-brand" href="index.html">
-							<span><font color="ORANGE"><img src="images/logos.jpg" width="75" height="31" alt="Tutorials " border="0"><B>LET'S LEARN EVER</B></font >
+							<h1>
+							<span><font color="Blue"><B>Let's Learn Ever</B></font >
 								</span>	
+						</h1>
 						</a>
 					</div>
 					<!--/.navbar-header-->
@@ -541,7 +543,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="mkls_footer_grid">
 					<div class="col-xs-4 mkls_footer_grid_left">
 						<h4>Location:</h4>
-						<p>Kaveripattinam,
+						<p>Housing Board,Kaveripattinam,
 							<br> Krishnagiri</p>
 					</div>
 					<div class="col-xs-4 mkls_footer_grid_left">
@@ -592,7 +594,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="container">
 				<div class="allah-copy">
 					<p>© 2018 LET'S LEARN EVER. All rights reserved | Design by
-						<a href="http://letslearnever.com/">LET'S LEARN EVER </a>
+						<a href="http://letslearnever.com/">Let's Learn Ever</a>
 					</p>
 				</div>
 				<div class="footercopy-social">
