--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="zxx">
 
 <head>
-	<title>GOOD WELL FOUNDATION</title>
+	<title>Let's Learn Ever</title>
 	<!-- meta-tags -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -41,7 +41,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 			<div class="bottom_header_left">
 				<p>
-					<span class="fa fa-map-marker" aria-hidden="true"></span> Harur , India
+					<span class="fa fa-map-marker" aria-hidden="true"></span>  Krishnagiri , India
 				</p>
 			</div>
 			<div class="bottom_header_right">
@@ -80,10 +80,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<span class="icon-bar"></span>
 						</button>
 						<a class="navbar-brand" href="index.html">
-						<h2>
-							<span><font color="ORANGE"><img src="images/logos.jpg" width="75" height="31" alt="Tutorials " border="0"><B>GOOD WELL FOUNDATION</B></font >
-								<label><B>Learn It Share it...</B></label></span>	
-						</h2>
+						<h1>
+							<span><font color="Blue"><B>Let's Learn Ever</B></font >
+								</span>	
+						</h1>
 						</a>
 					</div>
 					<!--/.navbar-header-->
@@ -189,23 +189,23 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 	</div>
 
-	<!-- footer -->
+		<!-- footer -->
 	<div class="mkl_footer">
 		<div class="sub-footer">
 			<div class="container">
 				<div class="mkls_footer_grid">
 					<div class="col-xs-4 mkls_footer_grid_left">
 						<h4>Location:</h4>
-						<p>TVK Nagar,Harur
-							<br> Dharmapuri</p>
+						<p>Housing Board,Kaveripattinam,
+							<br> Krishnagiri</p>
 					</div>
 					<div class="col-xs-4 mkls_footer_grid_left">
 						<h4>Mail Us:</h4>
 						<p>
-							<span>Phone : </span>999 444 4998</p>
+							<span>Phone : </span>6382199288</p>
 						<p>
 							<span>Email : </span>
-							<a href="mailto:info@example.com">goodwellfoundation@gmail.com</a>
+							<a href="mailto:info@example.com">letslearneveracademy@gmail.com</a>
 						</p>
 					</div>
 					<div class="col-xs-4 mkls_footer_grid_left">
@@ -246,8 +246,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="footer-copy-right">
 			<div class="container">
 				<div class="allah-copy">
-					<p>© 2018 GOOD WELL FOUNDATION. All rights reserved | Design by
-						<a href="http://goodwellfoundation.in/">Good Well Foundation</a>
+					<p>© 2018 LET'S LEARN EVER. All rights reserved | Design by
+						<a href="http://letslearnever.com/">Let's Learn Ever</a>
 					</p>
 				</div>
 				<div class="footercopy-social">
