--- a/courses.html
+++ b/courses.html
@@ -116,7 +116,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									</ul>-->
 								</li>
 								<li>
-									<a href="Gallery.html" class="effect-3">Gallery</a>
+									<a href="gallery.html" class="effect-3">Gallery</a>
 								</li>
 								<li>
 									<a href="contact.html" class="effect-3">Contact Us</a>
