--- a/codes.html
+++ b/codes.html
@@ -952,20 +952,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</p>
 				</div>
 				<div class="footercopy-social">
-					<ul>
+				<ul>
 						<li>
-							<a href="#">
+							<a href="https://www.facebook.com/letslearnever">
 								<span class="fa fa-facebook"></span>
 							</a>
 						</li>
 						<li>
-							<a href="#">
-								<span class="fa fa-twitter"></span>
+							<a href="https://www.instagram.com/letslearnever/">
+								<span class="fa  fa-instagram"></span>
 							</a>
 						</li>
 						<li>
-							<a href="#">
-								<span class="fa fa-rss"></span>
+							<a href="https://wa.me/c/916382199288">
+								<span class="fa fa-whatsapp"></span>
 							</a>
 						</li>
 						<li>
