--- a/register.html
+++ b/register.html
@@ -46,19 +46,22 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</div>
 			<div class="bottom_header_right">
 				<div class="bottom-social-icons">
-					<a class="facebook" href="#">
+					<a class="facebook" href="https://www.facebook.com/letslearnever">
 						<span class="fa fa-facebook"></span>
 					</a>
-					<a class="twitter" href="#">
-						<span class="fa fa-twitter"></span>
+					<a class="instagram" href="https://www.instagram.com/letslearnever/">
+						<span class="fa fa-instagram"></span>
 					</a>
-					<a class="pinterest" href="#">
+					<a class="whatsapp" href="https://wa.me/c/916382199288">
+						<span class="fa fa-whatsapp"></span>
+					</a>
+					<!--<a class="linkedin" href="https://instamojo.com/@Letslearnever">
+						<span class="fa  fa-credit-card"></span>
+					</a>-->
+					<a class="pinterest" href="https://instamojo.com/@Letslearnever">
 						<span class="fa fa-pinterest-p"></span>
-					</a>
-					<a class="linkedin" href="#">
-						<span class="fa fa-linkedin"></span>
-					</a>
-				</div>
+					</a>					
+					</div>
 				<div class="header-top-righ">
 					<a href="login.html">
 						<span class="fa fa-sign-out" aria-hidden="true"></span>Login</a>
@@ -251,20 +254,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</p>
 				</div>
 				<div class="footercopy-social">
-					<ul>
+				<ul>
 						<li>
-							<a href="#">
+							<a href="https://www.facebook.com/letslearnever">
 								<span class="fa fa-facebook"></span>
 							</a>
 						</li>
 						<li>
-							<a href="#">
-								<span class="fa fa-twitter"></span>
+							<a href="https://www.instagram.com/letslearnever/">
+								<span class="fa  fa-instagram"></span>
 							</a>
 						</li>
 						<li>
-							<a href="#">
-								<span class="fa fa-rss"></span>
+							<a href="https://wa.me/c/916382199288">
+								<span class="fa fa-whatsapp"></span>
 							</a>
 						</li>
 						<li>
